--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,11 @@
   border:2px solid var(--orange)
 }
 
+.button:disabled{
+  background: silver;
+  pointer-events: none;
+}
+
  ::-webkit-scrollbar{  /*  it remove scrollbar from post section  */
   display:none;
 }
